--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -56,8 +56,8 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
                         <dd><a href="#!/printers">席位设置</a></dd>
                     </dl>
                 </li>
+                <li class="layui-nav-item"><a href="#!/rzqs">日终清算</a></li>
                 <li class="layui-nav-item"><a href="#!/voucher">凭证管理</a></li>
-                <li class="layui-nav-item"><a href="">发布商品</a></li>
             </ul>
         </div>
     </div>
@@ -76,6 +76,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <script src="/layui/layui.all.js"></script>
 <script src="https://cdn.staticfile.org/angular.js/1.7.0/angular.min.js"></script>
 <script src="https://cdn.staticfile.org/angular.js/1.7.0/angular-route.min.js"></script>
+<script src="js/Smart.js"></script>
 <script src="admin.js"></script>
 </body>
 </html>
