搭建前台路由

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,18 +46,20 @@
                 </li>
             </ul>
             <ul class="layui-nav topLevelMenus" pc>
-                <li class="layui-nav-item layui-this" data-menu="contentManagement">
-                    <a href="javascript:;"><i class="layui-icon" data-icon="&#xe63c;">&#xe63c;</i><cite>系统设置</cite></a>
+                <li class="layui-nav-item layui-this" data-menu="jcsz">
+                    <a href="javascript:;"><i class="layui-icon" data-icon="&#xe63c;">&#xe63c;</i><cite>基础设置</cite></a>
                 </li>
-                <li class="layui-nav-item" data-menu="memberCenter" pc>
-                    <a href="javascript:;"><i class="seraph icon-icon10"
-                                              data-icon="icon-icon10"></i><cite>股票业务</cite></a>
+                <li class="layui-nav-item" data-menu="gpyw" pc>
+                    <a href="javascript:;"><i class="seraph icon-icon10"data-icon="icon-icon10"></i><cite>股票业务</cite></a>
                 </li>
-                <li class="layui-nav-item" data-menu="systemeSttings" pc>
+                <li class="layui-nav-item" data-menu="jjyw" pc>
                     <a href="javascript:;"><i class="layui-icon" data-icon="&#xe620;">&#xe620;</i><cite>基金业务</cite></a>
                 </li>
-                <li class="layui-nav-item" data-menu="seraphApi" pc>
+                <li class="layui-nav-item" data-menu="hgyw" pc>
                     <a href="javascript:;"><i class="layui-icon" data-icon="&#xe705;">&#xe705;</i><cite>回购业务</cite></a>
+                </li>
+                <li class="layui-nav-item" data-menu="rcyw" pc>
+                    <a href="javascript:;"><i class="layui-icon" data-icon="&#xe705;">&#xe705;</i><cite>日常业务</cite></a>
                 </li>
             </ul>
             <!-- 顶部右侧菜单 -->
@@ -72,7 +74,7 @@
                 </li>
                 <li class="layui-nav-item" id="userInfo">
                     <a href="javascript:;"><img src="images/face.jpg" class="layui-nav-img userAvatar" width="35"
-                                                height="35"><cite class="adminName">驊驊龔頾</cite></a>
+                                                height="35"><cite class="adminName">瓜皮组</cite></a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;" data-url="page/user/userInfo.html"><i class="seraph icon-ziliao"
                                                                                          data-icon="icon-ziliao"></i><cite>个人资料</cite></a>
@@ -102,14 +104,14 @@
             </p>
         </div>
         <!-- 搜索 -->
-        <div class="layui-form component">
+        <!--<div class="layui-form component">
             <select name="search" id="search" lay-search lay-filter="searchPage">
                 <option value="">搜索页面或功能</option>
                 <option value="1">layer</option>
                 <option value="2">form</option>
             </select>
             <i class="layui-icon">&#xe615;</i>
-        </div>
+        </div>-->
         <div class="navBar layui-side-scroll" id="navBar">
             <ul class="layui-nav layui-nav-tree">
                 <li class="layui-nav-item layui-this">
@@ -146,8 +148,7 @@
     </div>
     <!-- 底部 -->
     <div class="layui-footer footer">
-        <p><span>copyright @2018 驊驊龔頾</span>　　<a onclick="donation()" class="layui-btn layui-btn-danger layui-btn-sm">捐赠作者</a>
-        </p>
+        <p><span>copyright @2019 瓜皮组</span></p>
     </div>
 </div>
 
