--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -141,10 +141,10 @@
         </form>
     </div>
     <!-- 左侧导航 -->
-    <div class="layui-side layui-bg-black">
+    <div class="layui-side layui-bg-black " id="left">
         <div class="user-photo">
             <a class="img" title="我的头像"><img src="images/face.jpg" class="userAvatar"></a>
-            <p><span class="userName"  sec:authentication="principal.username"></span>，您好！
+            <p><span class="userName" id="userName" sec:authentication="principal.username"></span>，您好！
             </p>
         </div>
         <div class="navBar layui-side-scroll" id="navBar">
@@ -204,6 +204,8 @@
         $(document).ajaxSend(function(e, xhr, options) {
             xhr.setRequestHeader(header, token);
         });
+        var userName = $('#userName').text();
+        $.cookie('userName', userName);
     })
 </script>
 </body>
