--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,7 +50,7 @@
                     <a href="javascript:;"><i class="layui-icon" data-icon="&#xe705;">&#xe705;</i><cite>回购业务</cite></a>
                 </li>
                 <li class="layui-nav-item" data-menu="rcyw" pc>
-                    <a href="javascript:;"><i class="layui-icon" data-icon="&#xe705;">&#xe705;</i><cite>日常业务</cite></a>
+                    <a href="javascript:;"><i class="layui-icon" data-icon="&#xe62c;">&#xe62c;</i><cite>日常业务</cite></a>
                 </li>
             </ul>
             <!-- 顶部右侧菜单 -->
