--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,7 +64,7 @@
                 </li>
                 <li class="layui-nav-item" id="userInfo">
                     <a href="javascript:;"><img src="images/face.jpg" class="layui-nav-img userAvatar" width="35"
-                                                height="35"><cite class="adminName">瓜皮组</cite></a>
+                                                height="35"><cite class="adminName">菜单</cite></a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;" data-url="page/user/userInfo.html"><i class="seraph icon-ziliao"
                                                                                          data-icon="icon-ziliao"></i><cite>个人资料</cite></a>
@@ -167,7 +167,7 @@
     </div>
     <!-- 底部 -->
     <div class="layui-footer footer">
-        <sec:authorize access="hasRole('ROLE_ADMIN')"><p><span>copyright @2019 瓜皮组</span></p></sec:authorize>
+        <sec:authorize access="hasRole('ROLE_ADMIN')"><p><span>copyright @2019 HundSun</span></p></sec:authorize>
     </div>
 </div>
 
