--- a/src/main/resources/static/css/public.css
+++ b/src/main/resources/static/css/public.css
@@ -26,6 +26,7 @@
 /*后台首页*/
 .panel_box{ margin-bottom:5px;}
 .panel{ text-align:center; height:90px;}
+.panel .cl_height{ text-align:center; height:50px;}
 .panel_box a{display:block; border-radius:5px; overflow:hidden; height:80px; background-color:#f2f2f2 !important; }
 .panel_icon{ width:40%; display: inline-block; line-height:80px; float:left; position:relative; height:100%;}
 .panel_icon i{ font-size:40px !important; color:#fff; display: inline-block;}
