修改首页图标

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,13 +38,13 @@
             <!-- 顶级菜单 -->
             <ul class="layui-nav topLevelMenus" pc>
                 <li class="layui-nav-item layui-this" data-menu="jcsz">
-                    <a href="javascript:;"><i class="layui-icon" data-icon="&#xe63c;">&#xe63c;</i><cite>基础设置</cite></a>
+                    <a href="javascript:;"><i class="layui-icon" data-icon="&#xe620;">&#xe620;</i><cite>基础设置</cite></a>
                 </li>
                 <li id="gpyw" class="layui-nav-item" data-menu="gpyw" pc>
                     <a href="javascript:;"><i class="seraph icon-icon10"data-icon="icon-icon10"></i><cite>股票业务</cite></a>
                 </li>
                 <li id="jj" class="layui-nav-item" data-menu="jjyw" pc>
-                    <a href="javascript:;"><i class="layui-icon" data-icon="&#xe620;">&#xe620;</i><cite>基金业务</cite></a>
+                    <a href="javascript:;"><i class="layui-icon" data-icon="&#xe63c;">&#xe63c;</i><cite>基金业务</cite></a>
                 </li>
                 <li id="hg" class="layui-nav-item" data-menu="hgyw" pc>
                     <a href="javascript:;"><i class="layui-icon" data-icon="&#xe705;">&#xe705;</i><cite>回购业务</cite></a>
