首页图标更改-。-

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -63,7 +63,7 @@
                     <a href="javascript:;"><i class="seraph icon-lock"></i><cite>锁屏</cite></a>
                 </li>
                 <li class="layui-nav-item" id="userInfo">
-                    <a href="javascript:;"><img src="images/face.jpg" class="layui-nav-img userAvatar" width="35"
+                    <a href="javascript:;"><img src="images/coffee.jpg" class="layui-nav-img userAvatar" width="35"
                                                 height="35"><cite class="adminName">菜单</cite></a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;" data-url="page/user/userInfo.html"><i class="seraph icon-ziliao"
@@ -126,7 +126,7 @@
     <!-- 左侧导航 -->
     <div class="layui-side layui-bg-black " id="left">
         <div class="user-photo">
-            <a class="img" title="我的头像"><img src="images/face.jpg" class="userAvatar"></a>
+            <a class="img" title="我的头像"><img src="images/qiong.jpg" class="userAvatar"></a>
             <p><span class="userName" id="userName" sec:authentication="principal.username"></span>，您好！
                 <span class="authorities" id="authorities" sec:authentication="principal.authorities" hidden></span>
             </p>
