添加日常业务事件
Signed-off-by: gaozhen <gaozhen3h@163.com>

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,7 +49,7 @@
                 <li id="hg" class="layui-nav-item" data-menu="hgyw" pc>
                     <a href="javascript:;"><i class="layui-icon" data-icon="&#xe705;">&#xe705;</i><cite>回购业务</cite></a>
                 </li>
-                <li class="layui-nav-item" data-menu="rcyw" pc>
+                <li id="rc" class="layui-nav-item" data-menu="rcyw" pc>
                     <a href="javascript:;"><i class="layui-icon" data-icon="&#xe62c;">&#xe62c;</i><cite>日常业务</cite></a>
                 </li>
             </ul>
